tests/errors/const_01.py
from ltypes import i32, Const

def f():
    x: Const[i32]

f()
